test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/cast_to_array_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(10)
  ]
  ;
  return
  (
  int
  [
  const int(10)
  ]
  )
  identifier(arr)
  ;
  }
